finally got to editing the dashboardlayout

--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tua-react-admin",
+  "name": "dashboard-react-jcbince",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
